[package]
name = "ssr_rs"
version = "0.2.0"
authors = ["Valerio <valerioageno@yahoo.it>"]
edition = "2018"
description = "Enable server side rendering on servers written in rust"
readme = "./README.md"
homepage = "https://github.com/Valerioageno/ssr-rs"
repository = "https://github.com/Valerioageno/ssr-rs"
keywords = ["web", "ssr", "react", "actix", "server-side-render"]
categories = ["web-programming"]
license-file = "./LICENSE_MIT"
autoexamples = false
include = [
    "src/*.rs",
    "Cargo.toml",
]

[lib]
name = "ssr_rs"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rusty_v8 = "0.22.1"

[dev-dependencies]
serde_json = "1.0"

#Actix depencendies
actix-files = "0.5.0"
actix-web = "3"
futures = "0.3.13"

#Warp dependencies
tokio = { version = "1", features = ["full"] }
warp = "0.3"

#Tide dependencies
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

# Benchmark dependencies
criterion = "0.3.4"


#Their needs to stay commented because test going to panic with the non-nightly toolchain set
#rocket = "0.4.7"
#rocket_contrib = "0.4.7"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[[example]]
name = "actix"
path = "examples/actix.rs"

[[example]]
name = "actix-with-props"
path = "examples/actix_with_initial_props.rs"

[[example]]
name = "warp"
path = "examples/warp.rs"

[[example]]
name = "tide"
path = "examples/tide.rs"


# [[example]]
# name = "rocket"
# path = "examples/rocket.rs"

[[example]]
name = "run"
path = "examples/run.rs"



