[package]
name = "ssr_rs"
version = "0.2.3"
authors = ["Valerio <valerioageno@yahoo.it>"]
edition = "2021"
description = "Server side rendering with the v8 engine for parse and evaluate the javascript code"
readme = "./README.md"
homepage = "https://github.com/Valerioageno/ssr-rs"
documentation = "https://docs.rs/ssr_rs"
repository = "https://github.com/Valerioageno/ssr-rs"
keywords = ["web", "ssr", "react", "actix", "server-side-render"]
categories = ["web-programming"]
license-file = "./LICENSE_MIT"
autoexamples = false
include = [
    "src/*.rs",
    "Cargo.toml",
]

[lib]
name = "ssr_rs"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
v8 = "0.82.0"

[dev-dependencies]

# Actix depencendies
actix-files = "0.6.4"
actix-web = "4"

# Warp dependencies
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Tide dependencies
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

# Rocket dependencies
rocket = "0.5.0-rc.2"

# Benchmark dependencies
criterion = "0.3.4"
env_logger = "0.9.0"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[[example]]
name = "actix"
path = "examples/actix.rs"

[[example]]
name = "actix-with-props"
path = "examples/actix_with_initial_props.rs"

[[example]]
name = "warp"
path = "examples/warp.rs"

[[example]]
name = "tide"
path = "examples/tide.rs"

[[example]]
name = "rocket"
path = "examples/rocket.rs"

[[example]]
name = "run"
path = "examples/run.rs"


[[example]]
name = "shared"
path = "examples/shared_ssr.rs"
