[package]
name = "svelte-salvo-ssr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "svelte-salvo-ssr"
path = "backend/main.rs"

[dependencies]
salvo = { version = "0.68.3", features = ["serve-static"] }
serde_json = "1.0.118"
ssr_rs = "0.5.4"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"